wip: fixed menu width issue on mobile devices

--- a/src/components/menu/styles.module.scss
+++ b/src/components/menu/styles.module.scss
@@ -10,7 +10,7 @@ $buffer: 2rem;
   visibility: hidden;
   top: -100vh;
   transition: all 250ms ease-in-out;
-  width: 100vw;
+  width: 100%;
   z-index: 5;
 
   &--is-visible {
